--- a/css/header.css
+++ b/css/header.css
@@ -1,15 +1,68 @@
 .header {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 32px;
   background-color: var(--c12);
   align-items: center;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  gap: 32px;
 }
 
 .header-menu {
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
 }
 
-.header-menu-item-link {
+@media (max-width: 500px) {
+  .header-menu {
+    gap: 20px;
+  }
+}
+
+.header-menu a {
   color: var(--w);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 1.125rem;
-  background: #000;
+  display: block;
+  position: relative;
+}
+
+.header-menu a::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  transition: 300ms;
+  margin-top: 4px;
+}
+
+.header-menu a:hover::after {
+  width: 100%;
+}
+
+@media (max-width: 900px) {
+  .header-menu a {
+    background-color: #111;
+    padding: 12px 16px;
+    border-radius: 4px;
+    transition: 300ms;
+  }
+  .header-menu a:hover {
+    background-color: #2e2e2e;
+  }
+}
+
+@media (max-width: 500px) {
+  .header-menu a {
+    font-size: 0.9rem;
+    padding: 10px 14px;
+    border-radius: 4px;
+  }
 }
