efeito no botao e ajuste no padding do texto-1

--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,8 @@ body,
 h1,
 h2,
 h3,
-h4 {
+h4,
+p {
   margin: 0;
   padding: 0;
 }
@@ -32,6 +33,7 @@ ol {
 img {
   max-width: 100%;
   height: auto;
+  display: block;
   object-fit: cover;
   object-position: center right;
 }
@@ -67,13 +69,14 @@ img {
   line-height: 36px;
   font-size: 1.5rem;
   color: var(--c5);
+  padding-top: 2rem;
+  padding-bottom: 1.25rem;
 }
 
 @media (max-width: 900px) {
   .texto-1 {
     line-height: 28px;
     font-size: 1.25rem;
-    padding-bottom: 12px;
   }
 }
 
@@ -81,7 +84,6 @@ img {
   .texto-1 {
     line-height: 24px;
     font-size: 1.1rem;
-    padding-bottom: 14px;
   }
 }
 
@@ -94,6 +96,11 @@ img {
   font-size: 1.125rem;
   border-radius: 0.25rem;
   display: inline-block;
+  transition: 0.3s;
+}
+
+.btn-1:hover {
+  background-color: var(--p2);
 }
 
 @media (max-width: 900px) {
