--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,9 @@
   --p3: #a66f00;
   --p4: #664400;
   --p5: #332200;
+  --bgc-btn: linear-gradient(#ffbf00, #f2a50c);
+  --bgc-btn2: linear-gradient(#e4a30b, #a66f00);
+  --shadow-btn: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 body,
@@ -41,20 +44,19 @@ img {
 .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  line-height: 72px;
+  line-height: 1.125;
   font-size: 4rem;
+  margin-bottom: 2rem;
 }
 
 @media (max-width: 900px) {
   .titulo {
-    line-height: 54px;
     font-size: 3rem;
   }
 }
 
 @media (max-width: 500px) {
   .titulo {
-    line-height: 48px;
     font-size: 2.5rem;
   }
 }
@@ -66,30 +68,27 @@ img {
 .texto-1 {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 1.5;
   font-size: 1.5rem;
   color: var(--c5);
-  padding-top: 2rem;
-  padding-bottom: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 @media (max-width: 900px) {
   .texto-1 {
-    line-height: 28px;
     font-size: 1.25rem;
   }
 }
 
 @media (max-width: 500px) {
   .texto-1 {
-    line-height: 24px;
     font-size: 1.1rem;
   }
 }
 
 .btn-1 {
   padding: 1rem 2rem;
-  background-color: var(--p1);
+  background: var(--bgc-btn);
   color: var(--p5);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -97,10 +96,12 @@ img {
   border-radius: 0.25rem;
   display: inline-block;
   transition: 0.3s;
+  box-shadow: var(--shadow-btn);
+  text-transform: uppercase;
 }
 
 .btn-1:hover {
-  background-color: var(--p2);
+  background: var(--bgc-btn2);
 }
 
 @media (max-width: 900px) {
