--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,7 @@
 :root {
   --c12: #000;
+  --c11: #111;
+  --c8: #595959;
   --c5: #b2b2b2;
   --w: #fff;
   --p1: #ffbb00;
@@ -48,6 +50,9 @@ img {
   font-size: 4rem;
   margin-bottom: 2rem;
 }
+.titulo span {
+  color: var(--p1);
+}
 
 @media (max-width: 900px) {
   .titulo {
@@ -59,10 +64,6 @@ img {
   .titulo {
     font-size: 2.5rem;
   }
-}
-
-.p1 {
-  color: var(--p1);
 }
 
 .texto-1 {
