--- a/css/intro.css
+++ b/css/intro.css
@@ -2,6 +2,13 @@
   background-color: var(--c12);
   color: var(--w);
   box-shadow: inset 0 -120px #fff;
+  margin-bottom: 7.5rem;
+}
+
+@media (max-width: 900px) {
+  .intro-bg {
+    margin-bottom: 3.5rem;
+  }
 }
 
 .intro {
@@ -14,17 +21,32 @@
   gap: 0px 88px;
   padding-left: 20px;
   padding-right: 20px;
-  /* padding-bottom: 7.5rem; */
+}
+@media (max-width: 900px) {
+  .intro {
+    grid-template-columns: 1fr;
+    gap: 60px;
+  }
+}
+
+@media (max-width: 600px) {
+  .intro {
+    gap: 0px;
+  }
 }
 
 .intro article {
   padding-bottom: 200px;
 }
-
 @media (max-width: 900px) {
-  .intro {
-    grid-template-columns: 1fr;
-    gap: 60px;
+  .intro article {
+    padding-bottom: 60px;
+  }
+}
+
+@media (max-width: 600px) {
+  .intro article {
+    gap: 40px;
   }
 }
 
