--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: var(--c12);
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: space-between;
   padding: 32px;
-  background-color: var(--c12);
   align-items: center;
   box-sizing: border-box;
   flex-wrap: wrap;
@@ -19,6 +18,7 @@
   display: flex;
   gap: 40px;
   flex-wrap: wrap;
+  color: var(--cor-0);
 }
 
 @media (max-width: 500px) {
@@ -28,7 +28,6 @@
 }
 
 .header-menu a {
-  color: var(--w);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 1.125rem;
@@ -41,7 +40,7 @@
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #fff;
+  background-color: var(--cor-0);
   position: absolute;
   transition: 300ms;
   margin-top: 4px;
@@ -53,13 +52,13 @@
 
 @media (max-width: 900px) {
   .header-menu a {
-    background-color: #111;
+    background-color: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
     transition: 300ms;
   }
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
   .header-menu a::after {
     display: none;
