--- a/css/home/escolha.css
+++ b/css/home/escolha.css
@@ -40,7 +40,7 @@
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 2rem;
-  color: var(--c11);
+  color: var(--cor-11);
   margin-bottom: 0.5rem;
   position: relative;
   margin-left: 20px;
@@ -77,7 +77,7 @@
   font-family: "Roboto", sans-serif;
   font-size: 1.125rem;
   font-weight: 500;
-  color: var(--c8);
+  color: var(--cor-8);
 }
 
 @media (max-width: 900px) {
