--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,13 +1,19 @@
 .intro-bg {
-  background-color: var(--c12);
-  color: var(--w);
-  box-shadow: inset 0 -120px #fff;
+  background-color: var(--cor-12);
+  color: var(--cor-0);
+  box-shadow: inset 0 -120px var(--cor-0);
   margin-bottom: 7.5rem;
 }
 
 @media (max-width: 900px) {
   .intro-bg {
     margin-bottom: 3.5rem;
+    padding-top: 4.5rem;
+  }
+}
+@media (max-width: 600px) {
+  .intro-bg {
+    box-shadow: inset 0 -60px var(--cor-0);
   }
 }
 
@@ -40,13 +46,13 @@
 }
 @media (max-width: 900px) {
   .intro article {
-    padding-bottom: 60px;
+    padding-bottom: 20px;
   }
 }
 
 @media (max-width: 600px) {
   .intro article {
-    gap: 40px;
+    gap: 12px;
   }
 }
 
@@ -54,4 +60,18 @@
   height: 100%;
   object-fit: cover;
   border-radius: 0.25rem;
+}
+
+@media (max-width: 900px) {
+  .intro-img img {
+    height: 400px;
+    width: 100%;
+    object-fit: cover center center;
+  }
+}
+
+@media (max-width: 600px) {
+  .intro-img img {
+    height: 200px;
+  }
 }
