--- a/css/utility/componentes.css
+++ b/css/utility/componentes.css
@@ -1,48 +1,4 @@
-:root {
-  --c12: #000;
-  --c11: #111;
-  --c8: #595959;
-  --c5: #b2b2b2;
-  --w: #fff;
-  --p1: #ffbb00;
-  --p2: #e4a30b;
-  --p3: #a66f00;
-  --p4: #664400;
-  --p5: #332200;
-  --bgc-btn: linear-gradient(#ffbf00, #f2a50c);
-  --bgc-btn2: linear-gradient(#e4a30b, #a66f00);
-  --shadow-btn: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul,
-ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  object-fit: cover;
-  object-position: center right;
-}
-
+/* TITULO DE SECTION */
 .titulo {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -66,12 +22,9 @@ img {
   }
 }
 
+/* P */
 .texto-1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  font-size: 1.5rem;
-  color: var(--c5);
+  color: var(--cor-5);
   margin-bottom: 1.25rem;
 }
 
@@ -87,6 +40,7 @@ img {
   }
 }
 
+/* BTN */
 .btn-1 {
   padding: 1rem 2rem;
   background: var(--bgc-btn);
