--- a/css/utility/componentes.css
+++ b/css/utility/componentes.css
@@ -5,20 +5,27 @@
   line-height: 1.125;
   font-size: 4rem;
   margin-bottom: 2rem;
+  color: var(--cor-0);
 }
 .titulo span {
   color: var(--p1);
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1100px) {
   .titulo {
     font-size: 3rem;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 900px) {
   .titulo {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .titulo {
+    font-size: 2rem;
   }
 }
 
