--- a/css/utility/tipografia.css
+++ b/css/utility/tipografia.css
@@ -5,6 +5,20 @@
   line-height: 1.25;
 }
 
+.font-1-sb-m {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.font-1-m-sm {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
 .font-1-m-xg {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -14,14 +28,21 @@
 
 .font-2-r-m {
   font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.5;
-  font-size: 1.5rem;
 }
 
 .font-2-m-m {
   font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
   font-weight: 400;
   line-height: 1.3;
-  font-size: 1.125rem;
+}
+
+.font-2-r-n {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
