--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 @import "./global/global.css";
 @import "./utility/componentes.css";
 @import "./global/header.css";
+@import "./global/footer.css";
 @import "./home/intro.css";
 @import "./home/escolha.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimentos.css";
+@import "./home/seguros.css";
