--- a/css/utility/tipografia.css
+++ b/css/utility/tipografia.css
@@ -46,3 +46,9 @@
   font-weight: 400;
   line-height: 1.5;
 }
+
+.merriweather-black-italic {
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-style: italic;
+}
